--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "src/**/*.svelte" /* @OVERRIDE */,
     "typings/**/*.d.ts",
     // @OVERRIDE: +dist/tsconfig.json/include:
-    "dist/**/*.d.ts",
+    "dist/ambient.d.ts",
+    "dist/non-ambient.d.ts",
+    "dist/types/**/$types.d.ts",
   ],
   "compilerOptions": {
     "allowUnreachableCode": false,
