rev tsc, lint, bump kit:
tsc changes:
- unoverride module/target as they match svelte base
- disable resolvejsonmodule as it's unused
- group svelte under overall override includes
- unoverride outdir as it's ignored anyway with noemit
- unoverride removecomment cuz i feel like it
- unoverride decl and eclmap as they seem to be no-ops again bc of noemit
- mv override lower to not conflict with display

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "display": "tsc@509.2.1",
-  "extends": "./dist/tsconfig.json" /* @OVERRIDE */,
+  "display": "tsc@509.3.0",
   "include": [
     "src/**/*.ts",
-    "src/**/*.svelte" /* @OVERRIDE */,
     "typings/**/*.d.ts",
     // @OVERRIDE: +dist/tsconfig.json/include:
+    "src/**/*.svelte",
     "dist/ambient.d.ts",
     "dist/non-ambient.d.ts",
     "dist/types/**/$types.d.ts",
   ],
+  "extends": "./dist/tsconfig.json" /* @OVERRIDE */,
   "compilerOptions": {
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
@@ -23,10 +23,10 @@
     "noUnusedParameters": true,
     "strict": true,
     "allowArbitraryExtensions": true,
-    // "module": "esnext" /* @OVERRIDE */,
+    "module": "esnext",
     "moduleResolution": "bundler",
     // "paths": {},
-    "resolveJsonModule": true /* @OVERRIDE */,
+    // "resolveJsonModule": true,
     // "resolvePackageJsonExports": true,
     // "resolvePackageJsonImports": true,
     "rewriteRelativeImportExtensions": true,
@@ -37,24 +37,24 @@
       /* @OVERRIDE */
       /* {CONFIGURE} */
     ],
-    // "declaration": true /* @OVERRIDE */,
+    "declaration": true,
     // "declarationDir": "",
-    // "declarationMap": true /* @OVERRIDE */,
+    "declarationMap": true,
     // "emitDeclarationOnly": true,
     // "noEmit": true,
     "noEmitOnError": true,
-    // "outDir": "dist" /* @OVERRIDE */,
-    // "removeComments": true /* @OVERRIDE */,
+    "outDir": "dist",
+    "removeComments": true,
     "sourceMap": true,
     // "allowJs": true,
     // "checkJs": true,
     // "isolatedDeclarations": false,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": true /* @OVERRIDE */,
     // "lib": [
     //   "esnext",
     //   /* {CONFIGURE} */
     // ] /* @OVERRIDE */,
-    // "target": "esnext" /* @OVERRIDE */,
+    "target": "esnext",
     // "composite": true,
     "skipLibCheck": true /* @OVERRIDE */,
   },
