--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2211.6.0",
+  "$pkg": "2411.0.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -15,18 +15,18 @@
   "private": true,
   "engineStrict": true,
   "engines": {
-    "node": "^22",
-    "npm": "^10 || ^11"
+    "node": "^24",
+    "npm": "^11"
   },
   "type": "module",
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.7",
     "@fontsource/overpass-mono": "^5.2.8",
     "@sveltejs/adapter-static": "^3.0.10",
-    "@sveltejs/kit": "^2.48.0",
+    "@sveltejs/kit": "^2.48.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "eslint-plugin-svelte": "~3.12.5",
-    "linted": "33.3.7",
+    "eslint-plugin-svelte": "~3.13.0",
+    "linted": "33.4.0",
     "svelte-check": "^4.3.3",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
