--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,61 +1,30 @@
 {
-  "display": "tsc@509.3.0",
-  "extends": "./dist/tsconfig.json" /* @OVERRIDE */,
+  "files": [],
+  "extends": "./tsconfig-base.json",
   "include": [
-    "src/**/*.ts",
+    "src/**/*",
     "typings/**/*.d.ts",
-    // @OVERRIDE: +dist/tsconfig.json/include:
     "src/**/*.svelte",
     "dist/ambient.d.ts",
     "dist/non-ambient.d.ts",
     "dist/types/**/$types.d.ts",
   ],
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "strict": true,
-    "allowArbitraryExtensions": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    // "paths": {},
-    // "resolveJsonModule": true,
-    // "resolvePackageJsonExports": true,
-    // "resolvePackageJsonImports": true,
-    "rewriteRelativeImportExtensions": true,
-    // "rootDir": "src",
-    // "rootDirs": [],
-    // "typeRoots": [],
+    // "module": "esnext",
+    // "moduleResolution": "bundler",
     "types": [
       /* @OVERRIDE */
       /* {CONFIGURE} */
     ],
-    "declaration": true,
-    // "declarationDir": "",
-    "declarationMap": true,
-    // "emitDeclarationOnly": true,
-    // "noEmit": true,
-    "noEmitOnError": true,
-    "outDir": "dist",
-    "removeComments": true,
-    "sourceMap": true,
-    // "allowJs": true,
-    // "checkJs": true,
-    // "isolatedDeclarations": false,
+    // "declaration": true,
+    // "sourceMap": false,
     "verbatimModuleSyntax": true /* @OVERRIDE */,
     // "lib": [
     //   "esnext",
     //   /* {CONFIGURE} */
     // ] /* @OVERRIDE */,
-    "target": "esnext",
-    // "composite": true,
+    // "target": "esnext",
+    "composite": false /* @OVERRIDE */,
     "skipLibCheck": true /* @OVERRIDE */,
   },
 }
