--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2411.0.0",
+  "$pkg": "2411.4.1",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -26,23 +26,25 @@
     "@sveltejs/kit": "^2.48.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "eslint-plugin-svelte": "~3.13.0",
-    "linted": "33.4.0",
+    "linted": "33.4.2",
     "svelte-check": "^4.3.3",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   },
   "scripts": {
-    "clean": "cmd --% /c \"(if exist dist rmdir /s /q dist) & (if exist build rmdir /s /q build) & (if exist .eslintcache del /f /q .eslintcache)\" || rm -rf dist build .eslintcache",
-    "prebuild": "npm run clean",
-    "build": "svelte-kit sync && svelte-check && vite build",
-    "postbuild": "npm run lint || echo \"Lint failed. Continuing...\"",
+    "clean": "cmd --% /c \"for %G in (types dist dist-tests build packed) do (if exist %G rmdir /s /q %G) & for %G in (.eslintcache) do (if exist %G del /f /q %G)\" || rm -rf types dist dist-tests build packed .eslintcache",
+    "build": "npm run build:svelte",
+    "build:svelte": "svelte-kit sync && svelte-check && vite build",
+    "postbuild": "npm run lint || exit 0",
     "lint": "eslint --cache --fix",
     "pretest": "npm run build",
-    "test": "npm run --if-present test:runner",
-    "prestart": "npm run --ignore-scripts build",
-    "start": "vite preview --open",
-    "predeploy": "npm test",
+    "test": "npm run --if-present test:suite",
+    "prestart": "npm run build",
+    "start": "npm run start:svelte",
+    "start:svelte": "vite preview --open",
+    "predeploy": "npm run clean && npm test",
+    "stage": "",
     "deploy": ""
   },
   "author": "Jimmy Zhening Luo <jimmy-zhening-luo@users.noreply.github.com> (https://jimm.my/)"
