--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "extends": "./tsconfig-base.json",
+  "extends": [
+    "./tsconfig-base",
+    "./dist",
+  ],
   "include": [
     "src/**/*",
     "typings/**/*.d.ts",
