--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "./tsconfig-base",
-    "./dist/tsconfig",
+    "./dist/tsconfig.json",
   ],
   "include": [
     "src/**/*",
