--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": [
-    "./dist/tsconfig.json",
+    "./.svelte-kit/tsconfig.json",
     "./tsconfig-base",
   ],
   "include": [
     "src/**/*",
     "typings/**/*.d.ts",
     "src/**/*.svelte",
-    "dist/ambient.d.ts",
-    "dist/non-ambient.d.ts",
-    "dist/types/**/$types.d.ts",
+    ".svelte-kit/ambient.d.ts",
+    ".svelte-kit/non-ambient.d.ts",
+    ".svelte-kit/types/**/$types.d.ts",
   ],
 }
