--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "eslint-plugin-svelte": "~3.13.0",
+    "eslint-plugin-svelte": "3.13.1",
     "linted": "35.2.3",
     "svelte-check": "^4.3.4",
     "tslib": "^2.8.1",
