--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,6 +1,8 @@
 --- # dev.yml
 name: Azure Deploy (dev)
-on: {push: {branches: [dev]} }
+on:
+  push:
+    branches: [dev]
 jobs:
   deploy-dev:
     name: Build/Deploy (dev)
