--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -1,6 +1,8 @@
 --- # int.yml
 name: Azure Deploy (int)
-on: {push: {branches: [int]} }
+on:
+  push:
+    branches: [int]
 jobs:
   deploy-int:
     name: Build/Deploy (int)
