--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,5 +1,5 @@
 {
-  "display": "tsc@509.6.0",
+  "display": "tsc@509.7.1",
   "$help": "https://aka.ms/tsconfig/#quick-nav-Top%20Level",
   "compilerOptions": {
     "allowUnreachableCode": false,
@@ -17,10 +17,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "rewriteRelativeImportExtensions": true,
-    "types": [
-      /* @OVERRIDE */
-      /* {CONFIGURE} */
-    ],
+    "types": [],
     "declaration": true,
     "declarationMap": true,
     "noEmitOnError": true,
