--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@sveltejs/kit": "^2.49.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "eslint-plugin-svelte": "3.13.1",
-    "linted": "36.0.0",
+    "linted": "^36.0.2",
     "svelte-check": "^4.3.5",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
